<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.practice.PracticeQuestionFragment">

    <include layout="@layout/app_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:id="@+id/practice_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_practice_question"
                    style="@style/DescriptionTextNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    tools:text="Why do you want to come to USA?" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginVertical="15dp"
                    android:src="@drawable/practice_questions" />

                <TextView
                    android:id="@+id/tv_click_answer"
                    style="@style/ExplanationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_to_see_your_answer" />

                <androidx.cardview.widget.CardView
                    style="@style/CardViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <LinearLayout
                            android:id="@+id/layout_hiding_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/HidingTextAffect"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/hiding_text_blah" />

                            <TextView
                                style="@style/HidingTextAffect"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/hiding_text_blah" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_saved_answer"
                            style="@style/DescriptionTextBlack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="blah blah blah blah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blahblah blah blah"
                            android:textAlignment="viewStart"
                            android:visibility="gone" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_done"
                        style="@style/PracticeButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/done" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_next"
                        style="@style/PracticeButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/next" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>