<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple2"
    tools:context=".fragment.popularquestions.explanation.ExplanationPopularQuestionsFragment" >

    <include layout="@layout/app_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    style="@style/ExplanationQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/explanation_margin"
                    android:layout_marginVertical="5dp"
                    tools:text="Why do you want to come to USA ?" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_explanation"
                    style="@style/ExplanationQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book." />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sample_answer"
                    style="@style/ExplanationSampleAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_answer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_example"
                    style="@style/ExplanationAnswer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour." />

                <androidx.cardview.widget.CardView
                    style="@style/CardViewTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <EditText
                            android:id="@+id/edit_answer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditTextAppearance"
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"
                            android:overScrollMode="always"
                            android:scrollbarStyle="insideInset"
                            android:maxLines="10"
                            android:gravity="bottom"
                            android:hint="@string/your_answer" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_save"
                            style="@style/ShortButton"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_marginTop="16dp"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/save" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>